--- a/src/views/Main/components/Cases.scss
+++ b/src/views/Main/components/Cases.scss
@@ -11,7 +11,6 @@
   max-width: calc(100% / 7);
 
   &Icon {
-    background-color: #FFF;
     height: 64px;
     width: 64px;
   }
@@ -26,4 +25,5 @@
 
 .List {
   display: flex;
+  margin-top: 60px;
 }
