--- a/src/views/Main/components/HowItWorks.scss
+++ b/src/views/Main/components/HowItWorks.scss
@@ -31,15 +31,16 @@
 
 .Item {
   display: flex;
-  flex: 1 1 auto;
   flex-direction: column;
-  justify-content: center;
-  max-width: calc(100% / 3);
 
   &Description {
     line-height: 24px;
     margin-top: 16px;
     text-align: center;
+  }
+
+  &Icon {
+    flex: 0 0 200px;
   }
 
   &Title {
@@ -52,5 +53,7 @@
 }
 
 .List {
-  display: flex;
+  display: grid;
+  grid-column-gap: 80px;
+  grid-template-columns: repeat(3, 1fr);
 }
