--- a/src/components/Block.scss
+++ b/src/components/Block.scss
@@ -17,3 +17,16 @@
   margin-bottom: 60px;
   max-width: 1100px;
 }
+
+@media only screen and (max-width: 768px) {
+  .Root {
+    padding: 80px 24px;
+  }
+
+  .Title {
+    font-size: 30px;
+    line-height: 44px;
+    margin-bottom: 48px;
+    text-align: center;
+  }
+}
