--- a/src/views/Main/Desktop.scss
+++ b/src/views/Main/Desktop.scss
@@ -2,3 +2,11 @@
   display: flex;
   flex-direction: column;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .Root {
+    overflow: hidden;
+    width: 100%;
+  }
+}
