--- a/src/views/Main/components/Cases.scss
+++ b/src/views/Main/components/Cases.scss
@@ -27,3 +27,23 @@
   display: flex;
   margin-top: 60px;
 }
+
+@media only screen and (max-width: 768px) {
+  .Item {
+    flex: 0 0 100px;
+    margin: 16px 0;
+    max-width: 100%;
+
+    &Title {
+      font-size: 12px;
+      margin-top: 12px;
+    }
+  }
+
+  .List {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 0;
+  }
+}
