--- a/src/views/Main/components/Copyright.scss
+++ b/src/views/Main/components/Copyright.scss
@@ -57,3 +57,14 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media only screen and (max-width: 768px) {
+  .Social {
+    text-align: center;
+  }
+
+  .Wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+}
