--- a/src/views/Main/components/Features.scss
+++ b/src/views/Main/components/Features.scss
@@ -69,3 +69,40 @@
     color: inherit;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .Actions {
+    align-items: center;
+    flex-direction: column;
+    margin-top: 28px;
+
+    &Link {
+      font-size: 14px;
+      font-weight: 600;
+      text-transform: uppercase;
+      width: 200px;
+
+      &:not(:first-child) {
+        margin: 12px 0 0;
+      }
+    }
+  }
+
+  .Feature {
+    padding: 48px 0;
+
+    &:not(:first-child) {
+      border-top: 1px solid #FFFFFF;
+    }
+  }
+
+  .Features {
+    flex-direction: column;
+  }
+
+  .More {
+    font-weight: 600;
+    margin-top: 0;
+    text-decoration: underline;
+  }
+}
