--- a/src/views/Main/components/HowItWorks.scss
+++ b/src/views/Main/components/HowItWorks.scss
@@ -57,3 +57,30 @@
   grid-column-gap: 80px;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media only screen and (max-width: 768px) {
+  .Action {
+    background-color: #C92A3E;
+    color: #FFFFFF;
+  }
+
+  .Item {
+    &:not(:first-child) {
+      margin-top: 64px;
+    }
+
+    &Description {
+      font-size: 14px;
+      margin-top: 8px;
+    }
+
+    &Icon {
+      flex: 0 0 auto;
+    }
+  }
+
+  .List {
+    display: flex;
+    flex-direction: column;
+  }
+}
