--- a/src/views/Main/components/Partners.scss
+++ b/src/views/Main/components/Partners.scss
@@ -23,3 +23,19 @@
     max-width: 100%;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .Item {
+    max-width: 160px;
+
+    &:not(:first-child) {
+      margin-top: 12px;
+    }
+  }
+
+  .List {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
