--- a/src/views/Main/components/WhyNeed.scss
+++ b/src/views/Main/components/WhyNeed.scss
@@ -55,3 +55,50 @@
     line-height: 32px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .Item {
+    flex-direction: column;
+    margin: 0;
+
+    &:nth-child(even) {
+      flex-direction: column;
+    }
+
+    &:not(:first-child) {
+      margin-top: 68px;
+    }
+
+    &Actions {
+      display: flex;
+      margin-top: 40px;
+      justify-content: center;
+    }
+
+    &Description {
+      font-size: 14px;
+      text-align: center;
+    }
+
+    &Link {
+      font-size: 14px;
+      height: 44px;
+    }
+
+    &Preface {
+      font-size: 14px;
+      margin-top: 12px;
+      text-align: center;
+    }
+
+    &Right {
+      margin-top: 28px;
+    }
+
+    &Title {
+      font-size: 20px;
+      font-weight: 600;
+      text-align: center;
+    }
+  }
+}
