--- a/src/components/Page/Mobile.scss
+++ b/src/components/Page/Mobile.scss
@@ -3,8 +3,8 @@
 
   &WithMenu {
     .Container {
-      filter: blur(4px);
-      margin: -4px;
+      filter: blur(8px);
+      margin: 0 -8px;
     }
 
     .Header {
