--- a/src/views/Main/components/Features.scss
+++ b/src/views/Main/components/Features.scss
@@ -2,31 +2,40 @@
   background-color: #EAEEF2;
 }
 
+.Action {
+  align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  color: inherit;
+  display: flex;
+  height: 48px;
+  justify-content: center;
+  text-decoration: none;
+  width: 184px;
+
+  &:hover {
+    background-color: #A8A8A8;
+    color: #FFFFFF;
+  }
+
+  &:not(:first-child) {
+    margin-left: 28px;
+  }
+
+  &Red {
+    background: #C92A3E;
+    color: #FFFFFF;
+
+    &:hover {
+      background: #E23147;
+    }
+  }
+}
+
 .Actions {
   display: flex;
   justify-content: center;
   margin-top: 80px;
-
-  &Link {
-    align-items: center;
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    color: inherit;
-    display: flex;
-    height: 48px;
-    justify-content: center;
-    text-decoration: none;
-    width: 184px;
-
-    &:hover {
-      background-color: #C92A3E;
-      color: #FFFFFF;
-    }
-
-    &:not(:first-child) {
-      margin-left: 28px;
-    }
-  }
 }
 
 .Feature {
@@ -34,6 +43,19 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
+
+  &:not(:first-child) {
+    .FeatureContainer {
+      border-left: 1px solid #FFFFFF;
+    }
+  }
+
+  &Container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 
   &Description {
     line-height: 24px;
@@ -71,21 +93,21 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .Action {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    width: 200px;
+
+    &:not(:first-child) {
+      margin: 12px 0 0;
+    }
+  }
+
   .Actions {
     align-items: center;
     flex-direction: column;
     margin-top: 28px;
-
-    &Link {
-      font-size: 14px;
-      font-weight: 600;
-      text-transform: uppercase;
-      width: 200px;
-
-      &:not(:first-child) {
-        margin: 12px 0 0;
-      }
-    }
   }
 
   .Feature {
@@ -93,6 +115,10 @@
 
     &:not(:first-child) {
       border-top: 1px solid #FFFFFF;
+
+      .FeatureContainer {
+        border-left: 0;
+      }
     }
   }
 
