--- a/src/views/Main/components/Header.scss
+++ b/src/views/Main/components/Header.scss
@@ -25,7 +25,23 @@
   width: 184px;
 
   &:hover {
+    background: #E23147;
     cursor: pointer;
+  }
+}
+
+.Cover {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+
+  &Video {
+    height: 100%;
   }
 }
 
@@ -43,6 +59,11 @@
   font-weight: 300;
   padding: 0 16px;
   width: 424px;
+
+  &::-webkit-input-placeholder {color: #FFFAFA;}
+  &::-moz-placeholder          {color: #FFFAFA;}
+  &:-moz-placeholder           {color: #FFFAFA;}
+  &:-ms-input-placeholder      {color: #FFFAFA;}
 
   &:focus {
     outline: none;
@@ -74,6 +95,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 2;
 }
 
 @media only screen and (max-width: 768px) {
