--- a/src/views/Main/components/WhyUs.scss
+++ b/src/views/Main/components/WhyUs.scss
@@ -10,6 +10,7 @@
 
   &Mobile {
     display: none;
+    width: 320px;
   }
 }
 
@@ -21,6 +22,16 @@
 
     &Mobile {
       display: block;
+
+      &:not(:first-child) {
+        margin-top: 24px;
+      }
     }
+  }
+
+  .Wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 }
