--- a/src/views/Main/components/Header.scss
+++ b/src/views/Main/components/Header.scss
@@ -38,10 +38,12 @@
   left: 0;
   position: absolute;
   top: 0;
+  width: 100%;
   z-index: 1;
 
   &Video {
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
   }
 }
 
@@ -107,6 +109,13 @@
   .Button {
     height: 40px;
     margin: 12px 0 0;
+  }
+
+  .Cover {
+    &Video {
+      max-height: 100%;
+      min-width: auto;
+    }
   }
 
   .Form {
