--- a/src/views/Main/components/Media.scss
+++ b/src/views/Main/components/Media.scss
@@ -22,8 +22,31 @@
   }
 }
 
-.List {
-  display: grid;
-  grid-column-gap: 80px;
-  grid-template-columns: repeat(3, 1fr);
+.Slider {
+  overflow: hidden;
+
+  :global .slick-dots {
+    display: flex !important;
+    list-style: none;
+    margin: 24px 0 0;
+    padding: 0;
+
+    & > li {
+      flex: 1 1 auto;
+
+      &.slick-active {
+        & > button {
+          background: #C92A3E;
+        }
+      }
+
+      & > button {
+        background: #FFF;
+        border: 0;
+        color: transparent;
+        height: 3px;
+        width: 100%;
+      }
+    }
+  }
 }
