--- a/src/views/Main/components/Header.scss
+++ b/src/views/Main/components/Header.scss
@@ -5,11 +5,8 @@
   position: relative;
 
   &WithMenu {
-    .Menu {
-      background-color: #1C3B4F;
-      height: 100%;
-      position: fixed;
-      z-index: 10;
+    .Wrapper {
+      opacity: 0;
     }
   }
 }
@@ -99,6 +96,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  transition: opacity .2s;
   z-index: 2;
 }
 
