--- a/src/views/Main/components/Header.scss
+++ b/src/views/Main/components/Header.scss
@@ -40,8 +40,16 @@
   z-index: 1;
 
   &Video {
+    height: auto;
+    left: 50%;
     min-height: 100%;
     min-width: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: auto;
+    z-index: -1000;
   }
 }
 
